# rust-etcd-bin-vendored

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: unit-test.yml
etcd-bin-vendored/: Cargo.toml  README.md
etcd-bin-vendored-darwin-amd64/: Cargo.toml
etcd-bin-vendored-darwin-arm64/: Cargo.toml
etcd-bin-vendored-linux-amd64/: Cargo.toml
etcd-bin-vendored-linux-arm64/: Cargo.toml
etcd-bin-vendored-linux-ppc64le/: Cargo.toml
etcd-bin-vendored-linux-s390x/: Cargo.toml
etcd-bin-vendored-linux-s390x/src/: lib.rs
etcd-bin-vendored-windows-amd64/: Cargo.toml
etcd-bin-vendored-windows-amd64/src/: lib.rs
etcd-bin-vendored/src/: lib.rs
tools/: update-etcd
