[workspace.package]
version = "0.3.434"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/tgockel/rust-etcd-bin-vendored"
repository = "https://github.com/tgockel/rust-etcd-bin-vendored"
description = "etcd precompiled binaries bundled into a crate"
authors = ["Travis Gockel <travis@gockelhut.com>"]

[workspace]
resolver = "2"
members = [
    "etcd-bin-vendored",
    "etcd-bin-vendored-linux-amd64",
    "etcd-bin-vendored-linux-arm64",
    "etcd-bin-vendored-linux-ppc64le",
    "etcd-bin-vendored-linux-s390x",
    "etcd-bin-vendored-darwin-amd64",
    "etcd-bin-vendored-darwin-arm64",
    "etcd-bin-vendored-windows-amd64",
]

[workspace.dependencies]
etcd-bin-vendored-linux-amd64   = { path = "etcd-bin-vendored-linux-amd64",   version = "=0.3.434" }
etcd-bin-vendored-linux-arm64   = { path = "etcd-bin-vendored-linux-arm64",   version = "=0.3.434" }
etcd-bin-vendored-linux-ppc64le = { path = "etcd-bin-vendored-linux-ppc64le", version = "=0.3.434" }
#etcd-bin-vendored-linux-s390x   = { path = "etcd-bin-vendored-linux-s390x",   version = "=0.3.434" }
etcd-bin-vendored-darwin-amd64  = { path = "etcd-bin-vendored-darwin-amd64",  version = "=0.3.434" }
#etcd-bin-vendored-darwin-arm64  = { path = "etcd-bin-vendored-darwin-arm64",  version = "=0.3.434" }
etcd-bin-vendored-windows-amd64 = { path = "etcd-bin-vendored-windows-amd64", version = "=0.3.434" }
